completed each hotel details

--- a/src/Components/ListData/listDisplay.css
+++ b/src/Components/ListData/listDisplay.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 .conatiner-listdisplay{
     width: auto;
     /* margin-right: 200px; */
@@ -5,21 +9,27 @@
 .card{
     margin-top: 25px;
     margin-right: 20px;
+    height: 250px;
     padding: 10px;
-    transition-property: width;
-    transition-duration: 2s;
-    box-shadow: 1px 5px 4px 5px #888888;
+    box-shadow: 3px 5px 4px 5px #888888;
 }
 
 .card:hover{
-    z-index: -1;
+   background-color: wheat;
+   color: red;
 }
-
 
 img{
     margin-top: 6px;
 }
+
 hr{
     width: 250px;
     border-top: 3px dotted red;
+}
+
+.container-nodata{
+    margin-top: 15px;
+    margin-left: 30px;
+
 }
